--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,8 @@
 @import "~bootstrap/scss/bootstrap";
+
+.card img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+}
